manifests/base/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: misskey
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: key.aoki.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-service
                port:
                  number: 3000
    - host: proxy.key.aoki.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: media-proxy-service
                port:
                  number: 3000

  tls:
    - hosts:
        - "*.aoki.app"
      secretName: service-tls
    - hosts:
        - "proxy.key.aoki.app"
      secretName: media-proxy-tls
